# gha-coq-demo-coq-nix-toolbox

./: .gitignore  README.md  coq-demo.opam  meta.yml
.github/workflows/: docker-action.yml  nix-action.yml
