opam-version: "2.0"
maintainer: "erik@martin-dorel.org"
version: "dev"

homepage: "https://github.com/erikmd/gha-coq-demo-setup-ocaml"
dev-repo: "git+https://github.com/erikmd/gha-coq-demo-setup-ocaml.git"
bug-reports: "https://github.com/erikmd/gha-coq-demo-setup-ocaml/issues"
license: "MIT"

synopsis: "GHA Demo"
description: """
Demo using GHA.
"""

build: [
  ["sh" "-c" "coq_makefile -f _CoqProject -o Makefile"]
  [make "-j%{jobs}%"]
]
install: [make "install"]

run-test: [make "test"]

depends: [
  "coq" {= "8.19.2"}
  "coq-mathcomp-ssreflect" {= "2.2.0"}
]

tags: [
]
authors: [
  "Erik Martin-Dorel"
]
