opam-version: "2.0"
maintainer: "erik@martin-dorel.org"
version: "dev"

homepage: "https://github.com/erikmd/gha-coq-demo-coq-nix-toolbox"
dev-repo: "git+https://github.com/erikmd/gha-coq-demo-coq-nix-toolbox.git"
bug-reports: "https://github.com/erikmd/gha-coq-demo-coq-nix-toolbox/issues"
license: "MIT"

synopsis: "GHA Demo"
description: """
Demo using GHA."""

build: [make "-j%{jobs}%"]
install: [make "install"]
run-test: [make "test"]
depends: [
  "coq" {>= "8.19"}
  "coq-mathcomp-ssreflect" {>= "2.0"}
]

tags: [
  "keyword:continuous integration"
  "logpath:Demo"
]
authors: [
  "Erik Martin-Dorel"
]
